# credential-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/credential_manager/: credential_manager.py
